# ClaudeCodeManager

./: CLAUDE.md  COMMAND_HISTORY_MIGRATION_PLAN.md  MIGRATION_TESTING_CHECKLIST.md  README.md  SECURITY_IMPROVEMENTS.md  UX_COMMAND_HISTORY_IMPLEMENTATION_GUIDE.md  UX_COMPREHENSIVE_IMPROVEMENT_PLAN_CommandHistory.md  UX_IMPROVEMENT_PLAN_CommandHistory.md  UX_MIGRATION_PLAN_CommandHistory.md  biome.json  output.txt  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.cargo/: config.toml
.claude/: settings.json
.claude/agents/: code-review-specialist.md  react-frontend-specialist.md  rust-security-specialist.md  ux-design-specialist.md
.claude/commands/: create-pr.md
.github/workflows/: .gitkeep  ci.yml  update-dependencies.yml
claude-code-manager/: package-lock.json  package.json
claude-code-manager/src/: App.tsx  api.ts  types.ts
claude-code-manager/src-tauri/: Cargo.toml  tauri.conf.json
coverage/: coverage-final.json  index.html
coverage/ClaudeCodeManager/: index.html  vite.config.ts.html  vitest.config.ts.html
docs/: COMMAND_HISTORY_UX_IMPLEMENTATION_GUIDE.md
scripts/: fast-check.sh  fast-test.sh
src/: App.css  App.tsx  api-mock.ts  api.ts  setupTests.ts  test-setup.ts  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: claude_data.rs  commands.rs  lib.rs  main.rs  models.rs  tests.rs
src/components/: CommandHistory.tsx  CommandHistoryWrapper.tsx  CommandsAgentsEditor.tsx  Dashboard.tsx  ErrorBoundary.tsx  JSONEditor.tsx  (+11 more)
(+56 files in other folders)
